--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,30 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/thesis
-spring.datasource.username=thesis
-spring.datasource.password=thesis123
+#for localhost
+#spring.datasource.url=jdbc:mysql://localhost:3306/thesis
+#spring.datasource.username=thesis
+#spring.datasource.password=thesis123
+#for ip
+#spring.datasource.url=jdbc:mysql://192.168.196.1:3306/thesis
+#spring.datasource.username=ubuntu
+#spring.datasource.password=ubuntu123
+#for server
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/thesis
+spring.datasource.username=std159301
+spring.datasource.password=XH8uO3f84f6uGA5j9pJ8mp2025
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.servlet.context-path=/thesis-1.0-SNAPSHOT
+#end here for ip
 spring.jpa.show-sql=true
-logging.le
-vel.org.springframework.web=DEBUG
-server.port=8081
+logging.level.org.springframework.web=DEBUG
+#server.port=8081
 spring.jpa.hibernate.ddl-auto=none
 #It updates the database schema based on your JPA entity mappings. For example, if you add a new field to an entity, Hibernate will attempt to alter the database schema to accommodate the change.
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.query.in_clause_parameter_padding=true
 logging.level.org.springframework.security=DEBUG
-logging.level.com.example.uiuxtools=DEBUG
+logging.level.com.example.uiuxtools=TRACE
+logging.level.root=INFO
+# Use this in localhost
+#uploads.folder=uploads/
+# For production (in application-prod.properties or overridden with env var):
+uploads.folder=/opt/uiux/uploads/
